# MEXC-proghnoz

./: .gitignore  .replit  Dockerfile  README.md  ai_advisor.py  app.py  goldantilopaeth500_state.json  main.py  pyproject.toml  replit.md  requirements.txt  signal_sender.py  trading_bot.py
static/css/: dashboard.css
static/js/: dashboard.js
templates/: dashboard.html  webapp.html
